# poker_hand_importer

./: .gitignore  README.md  game_server.py  hand_converter.ipynb  hand_example2.txt  import_utils.py  main.py  models.py  pyproject.toml  representation.md  server.py  train.py  utils.py
create_dataset/: create_dataset.py  db_insert.py  insert.sql
env/: cardlib.py  data_classes.py  poker.py
hand_viewer/: package-lock.json  package.json
hand_viewer/src/: App.vue  variables.js
hand_viewer/src/assets/: cards.css
hand_viewer/src/components/: Board.vue  History.vue  NavBar.vue  PlayActions.vue
hand_viewer/src/mixins/: Utils.ts
hand_viewer/src/views/: PlayModel.vue
poker_hand_importer/create_dataset/: hand_example.txt
poker_hand_importer/hand_viewer/: README.md
poker_hand_importer/hand_viewer/src/: updateMethods.ts
poker_hand_importer/hand_viewer/src/assets/: styles.css
poker_hand_importer/tests/: test_betratios.py
poker_hand_importer/train/: self_play.py  training.ipynb
poker_hand_importer/utils/: config.py  data_types.py
src/create_dataset/: hand_converter.ipynb  schema.sql
src/hand_viewer/src/: main.ts  updateMethods.ts  variables.ts
src/tests/: test_betsize.py  test_rake.py
src/train/: models.py  self_play.py  train.py
src/utils/: config.py  data_types.py  import_utils.py  utils.py
tests/: gpt_test.py  test_betratios.py  test_betsize.py  test_betsize_sample.py  test_rake.py
train/: models.py  train.py
utils/: data_types.py  import_utils.py  utils.py
web_server/: app.js  example.html  index.html  styles.css
(+12 files in other folders)
