[tool.poetry]
name = "poker-hand-importer"
version = "0.1.0"
description = ""
authors = ["Morgan Griffiths <C5ipo7i@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pymongo = "4.6.1"
torch = "2.1.2"
Flask = "3.0.0"
Flask-Cors = "4.0.0"
numpy = "1.24.2"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
